@@ -1,3 +1,4 @@
+#include <sys/ioctl.h>
 #include <errno.h>                                                              
 #include <string.h>                                                             
 #include <stdio.h>                                                              
@@ -5,6 +6,7 @@
 #include <unistd.h>                                                             
 #include <fcntl.h>                                                              
 #include <time.h>
+#include <linux/i2c.h>
 #include <linux/i2c-dev.h>
 
 
