@@ -5,6 +5,7 @@ SVN HEAD
   decode-dimms: Decode module configuration type of DDR2 SDRAM
                 Decode bus width extension of DDR3 SDRAM
   i2c-dev.h: Minimize differences with kernel flavor
+             Move SMBus helper functions to include/i2c/smbus.h
   i2c-stub-from-dump: Be more tolerant on input dump format
 
 3.1.0 (2011-12-04)
